--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <!---Mis estilos CSS-->
-    <link rel="stylesheet" href="/css/misEstilos2.css">
+    <link rel="stylesheet" href="css/misEstilos2.css">
 </head>
 <body>
    <!--
     <nav class="navbar navbar-expand-lg bg-dark data-bs-theme='dark'">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="/imagen/logo.png" alt="Bootstrap"  width="100" height="35">
+                <img src="imagen/logo.png" alt="Bootstrap"  width="100" height="35">
             </a>
         </div>
     </nav>-->
@@ -143,4 +143,5 @@
 
 </script>
 </body>
+
 </html>
