--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-witdh, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagen/favicon.png" type="image/png">
-    <title>NASA Foto del dia</title>
+    <link rel="shortcut icon" href="imagen/favicon.png?v=1" type="image/png">
+    <title>STAR WARS Busqueda</title>
     <!---GOogle fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -145,3 +145,4 @@
 </body>
 
 </html>
+
